# SIK

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sikradio-receiver  sikradio-receiver.c  sikradio-sender  sikradio-sender.c  utils.h  zadanie  zadanie.c
